# memos

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  jest.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  scheduled-prerelease.yml  stale.yml
__tests__/: memos.test.ts
adapters/: langchain.py  ollama.py
docs/: adapters.md  api-reference.md  index.md
examples/: basic-usage.ts
server/: main.py  routes.py
src/: cli.ts  graph.ts  index.ts  memory.ts  types.ts
src/adapters/: base.ts
src/storage/: sqlite.ts
tests/: test_smoke.py
